--- a/org/colloquium/ocene.org
+++ b/org/colloquium/ocene.org
@@ -23,7 +23,7 @@
   |   |         15 | Stefan Ristanović     |    100 |     100 |           |     100 | 75.000 |
   |   |         16 | Dragutin Marjanović   |    100 |     100 |           |     100 | 75.000 |
   |   |         17 | Bojan Blagojević      |    100 |     100 |           |     100 | 75.000 |
-  |   |         18 | Aleksa Zrnić          |    100 |     100 |           |         | 50.000 |
+  |   |         18 | Aleksa Zrnić          |    100 |     100 |           |     100 | 75.000 |
   |   |         19 | Mina Medic            |    100 |     100 |           |     100 | 75.000 |
   |   |         20 | Katarina Preradov     |    100 |     100 |           |     100 | 75.000 |
   |   |         21 | Jovana Micic          |    100 |     100 |           |     100 | 75.000 |
@@ -39,11 +39,11 @@
   |   |         31 | Dunja Krga            |    100 |     100 |           |      67 | 66.750 |
   |   |         32 | Katarina Cerović      |     80 |      80 |           |     100 | 65.000 |
   |   |         33 | Nikola Dakić          |     60 |         |           |         | 15.000 |
-  |   |         34 | Đorđe Marjanović      |    100 |     100 |           |         | 50.000 |
+  |   |         34 | Đorđe Marjanović      |    100 |     100 |           |     100 | 75.000 |
   |   |         35 | Aleksandar Rakic      |        |         |           |         |  0.000 |
   |   |         36 | Kristina Pomirisac    |        |         |           |         |  0.000 |
   |   |         37 | Novica Nikolic        |     80 |      60 |           |     100 | 60.000 |
-  |   |         38 | Božo Bjeković         |    100 |     100 |           |         | 50.000 |
+  |   |         38 | Božo Bjeković         |    100 |     100 |           |     100 | 75.000 |
   |   |         39 | Ana Marojević         |    100 |     100 |           |     100 | 75.000 |
   |   |         40 | Maja Miljić           |    100 |     100 |           |     100 | 75.000 |
   |   |         41 | Stefan Plazić         |     90 |     100 |           |     100 | 72.500 |
@@ -52,8 +52,8 @@
   |   |         44 | Miodrag Vilotijević   |        |         |           |         |  0.000 |
   | ^ |     brStud |                       |        |         |           |         |        |
   |---+------------+-----------------------+--------+---------+-----------+---------+--------|
-  |   |   Prosečno |                       | 92.857 |  92.571 |     0.000 |  88.656 | 52.994 |
-  |   |   Položilo | 27                    |        |         |           |         |        |
+  |   |   Prosečno |                       | 92.857 |  92.571 |     0.000 |  89.629 | 54.699 |
+  |   |   Položilo | 30                    |        |         |           |         |        |
   | ^ |            | polozilo              |        |         |           |         |        |
   |   | Prolaznost | 0.614                 |        |         |           |         |        |
   #+TBLFM: @>>>$3=vcount(map(<if(gt(#1, 55), 1, [])>, @2$8..@45$8))::@>>>>$8=vmean(@2$8..@45$8);%.3f::@>>>>$7=vmean(@2$7..@45$7);%.3f::@>>>>$6=vmean(@2$6..@45$6);%.3f::@>>>>$5=vmean(@2$5..@45$5);%.3f::@>>>>$4=vmean(@2$4..@45$4);%.3f::@>$3=$polozilo/$brStud;%.3f::@2$2..@45$2=@# - 1::@2$8..@45$8=vsum($4..$7)/4;%.3f
