--- a/org/colloquium/ocene.org
+++ b/org/colloquium/ocene.org
@@ -60,21 +60,21 @@
 
 * Loznica
 
-  |   |        br. | ime i prezime       | python | clojure | smalltalk | haskell |  ukupno |
-  |---+------------+---------------------+--------+---------+-----------+---------+---------|
-  |   |          1 | Ivan Radosavljević  |    100 |     100 |       100 |      67 |  91.750 |
-  |   |          2 | Ivana Tešanović     |     70 |      80 |        75 |         |  56.250 |
-  |   |          3 | Branislav Lukić     |     40 |      60 |        65 |      67 |  58.000 |
-  |   |          4 | Jovan Popović       |     70 |      40 |        38 |      84 |  58.000 |
-  |   |          5 | David Dražić        |    100 |     100 |       100 |     100 | 100.000 |
-  |   |          6 | Marko Purić         |     50 |      60 |        75 |     100 |  71.250 |
-  |   |          7 | Mladen Vidović      |    100 |     100 |       100 |     100 | 100.000 |
-  |   |          8 | Aleksandra Mitrović |    100 |     100 |       100 |     100 | 100.000 |
-  |   |          9 | Dejan Jovanović     |     40 |      60 |        50 |     100 |  62.500 |
-  | ^ |     brStud |                     |        |         |           |         |         |
-  |---+------------+---------------------+--------+---------+-----------+---------+---------|
-  |   |   Prosečno |                     | 74.444 |  77.778 |    78.111 |  89.750 |  77.528 |
-  |   |   Položilo | 9                   |        |         |           |         |         |
-  | ^ |            | polozilo            |        |         |           |         |         |
-  |   | Prolaznost | 0.556               |        |         |           |         |         |
+  |   |        br. | ime i prezime       | python | clojure | smalltalk | haskell |  ukupno | projekat |
+  |---+------------+---------------------+--------+---------+-----------+---------+---------+----------|
+  |   |          1 | Ivan Radosavljević  |    100 |     100 |       100 |      67 |  91.750 |       10 |
+  |   |          2 | Ivana Tešanović     |     70 |      80 |        75 |         |  56.250 |          |
+  |   |          3 | Branislav Lukić     |     40 |      60 |        65 |      67 |  58.000 |          |
+  |   |          4 | Jovan Popović       |     70 |      40 |        38 |      84 |  58.000 |          |
+  |   |          5 | David Dražić        |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |          6 | Marko Purić         |     50 |      60 |        75 |     100 |  71.250 |          |
+  |   |          7 | Mladen Vidović      |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |          8 | Aleksandra Mitrović |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |          9 | Dejan Jovanović     |     40 |      60 |        50 |     100 |  62.500 |          |
+  | ^ |     brStud |                     |        |         |           |         |         |          |
+  |---+------------+---------------------+--------+---------+-----------+---------+---------+----------|
+  |   |   Prosečno |                     | 74.444 |  77.778 |    78.111 |  89.750 |  77.528 |          |
+  |   |   Položilo | 9                   |        |         |           |         |         |          |
+  | ^ |            | polozilo            |        |         |           |         |         |          |
+  |   | Prolaznost | 0.556               |        |         |           |         |         |          |
   #+TBLFM: @>>>$3=vcount(map(<if(gt(#1, 55), 1, [])>, @2$8..@10$8))::@>>>>$8=vmean(@2$8..@10$8);%.3f::@>>>>$7=vmean(@2$7..@10$7);%.3f::@>>>>$6=vmean(@2$6..@10$6);%.3f::@>>>>$5=vmean(@2$5..@10$5);%.3f::@>>>>$4=vmean(@2$4..@10$4);%.3f::@>$3=$polozilo/$brStud;%.3f::@2$2..@10$2=@# - 1::@2$8..@10$8=vsum($4..$7)/4;%.3f
