Projekat Milorad Vojinović

--- a/org/colloquium/ocene.org
+++ b/org/colloquium/ocene.org
@@ -4,58 +4,58 @@
 
 * Novi Sad
 
-  |   |        br. | ime i prezime         | python | clojure | smalltalk | haskell |  ukupno |
-  |---+------------+-----------------------+--------+---------+-----------+---------+---------|
-  |   |          1 | Aleksandar Novaković  |    100 |     100 |       100 |     100 | 100.000 |
-  |   |          2 | Stefan Kalnak         |    100 |     100 |       100 |     100 | 100.000 |
-  |   |          3 | Sebastijan Stevanović |    100 |     100 |       100 |     100 | 100.000 |
-  |   |          4 | Dušan Borovčanin      |    100 |     100 |       100 |     100 | 100.000 |
-  |   |          5 | Arsenije Vladisavljev |    100 |     100 |       100 |     100 | 100.000 |
-  |   |          6 | Stefan Bratic         |    100 |     100 |       100 |     100 | 100.000 |
-  |   |          7 | Milorad Vojnovic      |    100 |     100 |        75 |     100 |  93.750 |
-  |   |          8 | Ivan Mihajlov         |     80 |         |           |         |  20.000 |
-  |   |          9 | Predrag Falcic        |    100 |      80 |        50 |      34 |  66.000 |
-  |   |         10 | Nemanja Milosavljevic |     70 |      80 |        75 |      34 |  64.750 |
-  |   |         11 | Predrag Kaljevic      |     90 |      60 |        50 |      34 |  58.500 |
-  |   |         12 | Milos Obradovic       |    100 |      80 |       100 |     100 |  95.000 |
-  |   |         13 | Milos Andric          |        |      80 |       100 |     100 |  70.000 |
-  |   |         14 | Mladen Došlić         |     80 |      60 |           |     100 |  60.000 |
-  |   |         15 | Stefan Ristanović     |    100 |     100 |       100 |     100 | 100.000 |
-  |   |         16 | Dragutin Marjanović   |    100 |     100 |       100 |     100 | 100.000 |
-  |   |         17 | Bojan Blagojević      |    100 |     100 |        88 |     100 |  97.000 |
-  |   |         18 | Aleksa Zrnić          |    100 |     100 |       100 |     100 | 100.000 |
-  |   |         19 | Mina Medic            |    100 |     100 |       100 |     100 | 100.000 |
-  |   |         20 | Katarina Preradov     |    100 |     100 |       100 |     100 | 100.000 |
-  |   |         21 | Jovana Micic          |    100 |     100 |       100 |     100 | 100.000 |
-  |   |         22 | Jasna Stanković       |    100 |     100 |       100 |     100 | 100.000 |
-  |   |         23 | Nikola Lukić          |     90 |     100 |        90 |     100 |  95.000 |
-  |   |         24 | Damjan Bećirović      |        |      80 |       100 |     100 |  70.000 |
-  |   |         25 | Nikola Korica         |     70 |     100 |       100 |      67 |  84.250 |
-  |   |         26 | Kristina Grujić       |        |         |           |         |   0.000 |
-  |   |         27 | Tamara Varađanin      |     70 |     100 |       100 |     100 |  92.500 |
-  |   |         28 | Luka Klačar           |        |         |           |         |   0.000 |
-  |   |         29 | Miljana Vinokić       |        |         |           |         |   0.000 |
-  |   |         30 | Ivana Savin           |     90 |      80 |        75 |      67 |  78.000 |
-  |   |         31 | Dunja Krga            |    100 |     100 |        75 |      67 |  85.500 |
-  |   |         32 | Katarina Cerović      |     80 |      80 |        75 |     100 |  83.750 |
-  |   |         33 | Nikola Dakić          |     60 |         |           |         |  15.000 |
-  |   |         34 | Đorđe Marjanović      |    100 |     100 |        75 |     100 |  93.750 |
-  |   |         35 | Aleksandar Rakic      |        |         |           |         |   0.000 |
-  |   |         36 | Kristina Pomirisac    |        |         |           |         |   0.000 |
-  |   |         37 | Novica Nikolic        |     80 |      60 |        50 |     100 |  72.500 |
-  |   |         38 | Božo Bjeković         |    100 |     100 |       100 |     100 | 100.000 |
-  |   |         39 | Ana Marojević         |    100 |     100 |       100 |     100 | 100.000 |
-  |   |         40 | Maja Miljić           |    100 |     100 |        88 |     100 |  97.000 |
-  |   |         41 | Stefan Plazić         |     90 |     100 |        88 |     100 |  94.500 |
-  |   |         42 | Nemanja Žunić         |    100 |     100 |       100 |      34 |  83.500 |
-  |   |         43 | Mladen Stajčić        |        |         |           |         |   0.000 |
-  |   |         44 | Miodrag Vilotijević   |        |         |           |         |   0.000 |
-  | ^ |     brStud |                       |        |         |           |         |         |
-  |---+------------+-----------------------+--------+---------+-----------+---------+---------|
-  |   |   Prosečno |                       | 92.857 |  92.571 |    89.824 |  89.629 |  72.051 |
-  |   |   Položilo | 35                    |        |         |           |         |         |
-  | ^ |            | polozilo              |        |         |           |         |         |
-  |   | Prolaznost | 0.795                 |        |         |           |         |         |
+  |   |        br. | ime i prezime         | python | clojure | smalltalk | haskell |  ukupno | projekat |
+  |---+------------+-----------------------+--------+---------+-----------+---------+---------+----------|
+  |   |          1 | Aleksandar Novaković  |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |          2 | Stefan Kalnak         |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |          3 | Sebastijan Stevanović |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |          4 | Dušan Borovčanin      |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |          5 | Arsenije Vladisavljev |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |          6 | Stefan Bratic         |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |          7 | Milorad Vojnovic      |    100 |     100 |        75 |     100 |  93.750 |      100 |
+  |   |          8 | Ivan Mihajlov         |     80 |         |           |         |  20.000 |          |
+  |   |          9 | Predrag Falcic        |    100 |      80 |        50 |      34 |  66.000 |          |
+  |   |         10 | Nemanja Milosavljevic |     70 |      80 |        75 |      34 |  64.750 |          |
+  |   |         11 | Predrag Kaljevic      |     90 |      60 |        50 |      34 |  58.500 |          |
+  |   |         12 | Milos Obradovic       |    100 |      80 |       100 |     100 |  95.000 |          |
+  |   |         13 | Milos Andric          |        |      80 |       100 |     100 |  70.000 |          |
+  |   |         14 | Mladen Došlić         |     80 |      60 |           |     100 |  60.000 |          |
+  |   |         15 | Stefan Ristanović     |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |         16 | Dragutin Marjanović   |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |         17 | Bojan Blagojević      |    100 |     100 |        88 |     100 |  97.000 |          |
+  |   |         18 | Aleksa Zrnić          |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |         19 | Mina Medic            |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |         20 | Katarina Preradov     |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |         21 | Jovana Micic          |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |         22 | Jasna Stanković       |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |         23 | Nikola Lukić          |     90 |     100 |        90 |     100 |  95.000 |          |
+  |   |         24 | Damjan Bećirović      |        |      80 |       100 |     100 |  70.000 |          |
+  |   |         25 | Nikola Korica         |     70 |     100 |       100 |      67 |  84.250 |          |
+  |   |         26 | Kristina Grujić       |        |         |           |         |   0.000 |          |
+  |   |         27 | Tamara Varađanin      |     70 |     100 |       100 |     100 |  92.500 |          |
+  |   |         28 | Luka Klačar           |        |         |           |         |   0.000 |          |
+  |   |         29 | Miljana Vinokić       |        |         |           |         |   0.000 |          |
+  |   |         30 | Ivana Savin           |     90 |      80 |        75 |      67 |  78.000 |          |
+  |   |         31 | Dunja Krga            |    100 |     100 |        75 |      67 |  85.500 |          |
+  |   |         32 | Katarina Cerović      |     80 |      80 |        75 |     100 |  83.750 |          |
+  |   |         33 | Nikola Dakić          |     60 |         |           |         |  15.000 |          |
+  |   |         34 | Đorđe Marjanović      |    100 |     100 |        75 |     100 |  93.750 |          |
+  |   |         35 | Aleksandar Rakic      |        |         |           |         |   0.000 |          |
+  |   |         36 | Kristina Pomirisac    |        |         |           |         |   0.000 |          |
+  |   |         37 | Novica Nikolic        |     80 |      60 |        50 |     100 |  72.500 |          |
+  |   |         38 | Božo Bjeković         |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |         39 | Ana Marojević         |    100 |     100 |       100 |     100 | 100.000 |          |
+  |   |         40 | Maja Miljić           |    100 |     100 |        88 |     100 |  97.000 |          |
+  |   |         41 | Stefan Plazić         |     90 |     100 |        88 |     100 |  94.500 |          |
+  |   |         42 | Nemanja Žunić         |    100 |     100 |       100 |      34 |  83.500 |          |
+  |   |         43 | Mladen Stajčić        |        |         |           |         |   0.000 |          |
+  |   |         44 | Miodrag Vilotijević   |        |         |           |         |   0.000 |          |
+  | ^ |     brStud |                       |        |         |           |         |         |          |
+  |---+------------+-----------------------+--------+---------+-----------+---------+---------+----------|
+  |   |   Prosečno |                       | 92.857 |  92.571 |    89.824 |  89.629 |  72.051 |          |
+  |   |   Položilo | 35                    |        |         |           |         |         |          |
+  | ^ |            | polozilo              |        |         |           |         |         |          |
+  |   | Prolaznost | 0.795                 |        |         |           |         |         |          |
   #+TBLFM: @>>>$3=vcount(map(<if(gt(#1, 55), 1, [])>, @2$8..@45$8))::@>>>>$8=vmean(@2$8..@45$8);%.3f::@>>>>$7=vmean(@2$7..@45$7);%.3f::@>>>>$6=vmean(@2$6..@45$6);%.3f::@>>>>$5=vmean(@2$5..@45$5);%.3f::@>>>>$4=vmean(@2$4..@45$4);%.3f::@>$3=$polozilo/$brStud;%.3f::@2$2..@45$2=@# - 1::@2$8..@45$8=vsum($4..$7)/4;%.3f
 
 * Loznica
