Ocena iz projekta dodatna

--- a/org/colloquium/ocene.org
+++ b/org/colloquium/ocene.org
@@ -49,13 +49,13 @@
   |   |         41 |             | Stefan Plazić         |     90 |     100 |        88 |     100 |     94.500 |          |           |   94.5 |
   |   |         42 |             | Nemanja Žunić         |    100 |     100 |       100 |      34 |     83.500 |          |           |   83.5 |
   |   |         43 |             | Mladen Stajčić        |        |         |           |         |      0.000 |          |           |     0. |
-  |   |         44 |             | Miodrag Vilotijević   |        |         |           |         |      0.000 |          |           |     0. |
+  |   |         44 |             | Miodrag Vilotijević   |        |         |           |         |      0.000 |      100 |           |   100. |
   | ^ |     brStud |             |                       |        |         |           |         |            |          |           |        |
   |---+------------+-------------+-----------------------+--------+---------+-----------+---------+------------+----------+-----------+--------|
   |   |   Prosečno |             |                       | 92.857 |  92.571 |    89.824 |  89.629 |     72.051 |          |           |        |
   |   |   Položilo |             | 35                    |        |         |           |         |            |          |           |        |
   | ^ |            |             | polozilo              |        |         |           |         |            |          |           |        |
-  |   | Prolaznost |             | 0.795                 |        |         |           |         |            |        1 |         2 |        |
+  |   | Prolaznost |             | 0.795                 |        |         |           |         |            |        2 |         2 |        |
   #+TBLFM: @>$10=vcount(@I..@II)::@>$11=vcount(@I..@II)::@>>>$4=vcount(map(<if(gt(#1, 55), 1, [])>, @2$9..@45$9))::@>>>>$9=vmean(@2$9..@45$9);%.3f::@>>>>$8=vmean(@2$8..@45$8);%.3f::@>>>>$7=vmean(@2$7..@45$7);%.3f::@>>>>$6=vmean(@2$6..@45$6);%.3f::@>>>>$5=vmean(@2$5..@45$5);%.3f::@>$4=$polozilo/$brStud;%.3f::@2$2..@45$2=@# - 1::@2$9..@45$9=vsum($5..$8)/4;%.3f::@2$12..@45$12=vsum($9..$11)
 
 * Loznica
