--- a/org/plan_rada.org
+++ b/org/plan_rada.org
@@ -3,37 +3,43 @@
 #+OPTIONS: toc:nil num:nil
 #+LANGUAGE: sr
 
-* Plan nastave
+* 2017
 
   #+ATTR_HTML: :border 2 :frame border
   | nedelja | tema predavanja | datum predavanja | tema vežbi | utorak           | četvrtak         | petak            |
   |---------+-----------------+------------------+------------+------------------+------------------+------------------|
-  |       1 | [[*predavanja 1][Uvod u predmet]]  | <2017-03-01 Wed> |            |                  |                  |                  |
-  |       2 | [[*predavanja 2][Python 1]]        | <2017-03-08 Wed> |            |                  |                  |                  |
+  |       1 | [[#p1_2017][Uvod u predmet]]  | <2017-03-01 Wed> |            |                  |                  |                  |
+  |       2 | [[#p2_2017][Python 1]]        | <2017-03-08 Wed> |            |                  |                  |                  |
   |       3 | *ICIST*         |                  |            |                  |                  |                  |
-  |       4 | [[*predavanja 3][Python 2]]        | <2017-03-22 Wed> | [[*vežbe 1][v1]]         | <2017-03-21 Tue> | <2017-03-23 Thu> | <2017-03-24 Fri> |
-  |       5 | [[*predavanja 4][Python 3]]        | <2017-03-29 Wed> | [[*vežbe 2][v2]]         | <2017-03-28 Tue> | <2017-03-30 Thu> | <2017-03-31 Fri> |
+  |       4 | [[#p3_2017][Python 2]]        | <2017-03-22 Wed> | [[*vežbe 1][v1]]         | <2017-03-21 Tue> | <2017-03-23 Thu> | <2017-03-24 Fri> |
+  |       5 | [[#p4_2017][Python 3]]        | <2017-03-29 Wed> | [[*vežbe 2][v2]]         | <2017-03-28 Tue> | <2017-03-30 Thu> | <2017-03-31 Fri> |
   |---------+-----------------+------------------+------------+------------------+------------------+------------------|
-  |       6 | [[*predavanja 5][Clojure 1]]       | <2017-04-05 Wed> | [[*vežbe 3][v3]]         | <2017-04-04 Tue> | <2017-04-06 Thu> | <2017-04-07 Fri> |
-  |       7 | [[*predavanja 6][Clojure 2]]       | <2017-04-12 Wed> | [[*vežbe 4][v4]]         | <2017-04-11 Tue> | <2017-04-13 Thu> | <2017-04-28 Fri> |
-  |       8 | [[*predavanja 7][Clojure 3]]       | <2017-04-26 Wed> | [[*vežbe 5][v5]]         | <2017-04-25 Tue> | <2017-04-27 Thu> | <2017-05-05 Fri> |
-  |       9 | [[*predavanja 8][Clojure 4]]       | <2017-05-03 Wed> | [[*vežbe 6][v6]]         | <2017-05-09 Tue> | <2017-05-04 Thu> | <2017-05-12 Fri> |
+  |       6 | [[#p5_2017][Clojure 1]]       | <2017-04-05 Wed> | [[*vežbe 3][v3]]         | <2017-04-04 Tue> | <2017-04-06 Thu> | <2017-04-07 Fri> |
+  |       7 | [[#p6_2017][Clojure 2]]       | <2017-04-12 Wed> | [[*vežbe 4][v4]]         | <2017-04-11 Tue> | <2017-04-13 Thu> | <2017-04-28 Fri> |
+  |       8 | [[#p7_2017][Clojure 3]]       | <2017-04-26 Wed> | [[*vežbe 5][v5]]         | <2017-04-25 Tue> | <2017-04-27 Thu> | <2017-05-05 Fri> |
+  |       9 | [[#p8_2017][Clojure 4]]       | <2017-05-03 Wed> | [[*vežbe 6][v6]]         | <2017-05-09 Tue> | <2017-05-04 Thu> | <2017-05-12 Fri> |
   |---------+-----------------+------------------+------------+------------------+------------------+------------------|
-  |      10 | [[*predavanja 9][Smalltalk 1]]     | <2017-05-10 Wed> | [[*vežbe 7][v7]]         | <2017-05-16 Tue> | <2017-05-11 Thu> | <2017-05-19 Fri> |
-  |      11 | [[*predavanja 10][Smalltalk 2]]     | <2017-05-17 Wed> | [[*vežbe 8][v8]]         | <2017-05-23 Tue> | <2017-05-18 Thu> | <2017-05-26 Fri> |
+  |      10 | [[#p9_2017][Smalltalk 1]]     | <2017-05-10 Wed> | [[*vežbe 7][v7]]         | <2017-05-16 Tue> | <2017-05-11 Thu> | <2017-05-19 Fri> |
+  |      11 | [[#p10_2017][Smalltalk 2]]     | <2017-05-17 Wed> | [[*vežbe 8][v8]]         | <2017-05-23 Tue> | <2017-05-18 Thu> | <2017-05-26 Fri> |
   |---------+-----------------+------------------+------------+------------------+------------------+------------------|
-  |      12 | [[*predavanja 11][Haskell 1]]       | <2017-05-24 Wed> | [[*vežbe 9][v9]]         | <2017-05-30 Tue> | <2017-05-25 Thu> | <2017-06-02 Fri> |
-  |      13 | [[*predavanja 12][Haskell 2]]       | <2017-05-31 Wed> | [[*vežbe 10][v10]]        | <2017-06-06 Tue> | <2017-06-01 Thu> | <2017-06-09 Fri> |
-  |      14 | [[*predavanja 13][Haskell 3]]       | <2017-06-07 Wed> | [[*vežbe 11][v11]]        | <2017-06-13 Tue> | <2017-06-08 Thu> | <2017-06-14 Wed> |
+  |      12 | [[#p11_2017][Haskell 1]]       | <2017-05-24 Wed> | [[*vežbe 9][v9]]         | <2017-05-30 Tue> | <2017-05-25 Thu> | <2017-06-02 Fri> |
+  |      13 | [[#p12_2017][Haskell 2]]       | <2017-05-31 Wed> | [[*vežbe 10][v10]]        | <2017-06-06 Tue> | <2017-06-01 Thu> | <2017-06-09 Fri> |
+  |      14 | [[#p13_2017][Haskell 3]]       | <2017-06-07 Wed> | [[*vežbe 11][v11]]        | <2017-06-13 Tue> | <2017-06-08 Thu> | <2017-06-14 Wed> |
   #+TBLFM: $1=@# - 1
 
   # Poglavlja ispod treba da sadrže kratak opis predavanja i vežbi, na
   # njih gađaju linkovi iz tabele
 
 ** predavanja 1
+   :PROPERTIES:
+   :CUSTOM_ID: p1_2017
+   :END:
    - Kratak pregled oblasti
    - Način polaganja - kolokvijumi ili mini projekat
 ** predavanja 2
+   :PROPERTIES:
+   :CUSTOM_ID: p2_2017
+   :END:
    - functools
    - itertools
    - collections
@@ -41,29 +47,62 @@
    - generators
    - cooroutines
 ** predavanja 3
+   :PROPERTIES:
+   :CUSTOM_ID: p3_2017
+   :END:
    - meta-classes, multiple inheritance, special methods, overriding operators
    - Static types checking. New type hinting syntax. mypy
    - Transpilers - Cython & Co. - Make Python programs run faster
 ** predavanja 4
+   :PROPERTIES:
+   :CUSTOM_ID: p4_2017
+   :END:
    - Parsing & code generators - DSL basics (mali uvod u JSD predmet)
 ** predavanja 5
+   :PROPERTIES:
+   :CUSTOM_ID: p5_2017
+   :END:
    - [[file:clojure.org::*Uvod][Uvod]]
 ** predavanja 6
+   :PROPERTIES:
+   :CUSTOM_ID: p6_2017
+   :END:
    - [[file:clojure.org::*Elementi%20jezika][Elementi jezika]]
 ** predavanja 7
+   :PROPERTIES:
+   :CUSTOM_ID: p7_2017
+   :END:
    - [[file:clojure.org::*Kada%20je%20mutacija%20stvarno%20nezaobilazna][Kada je mutacija stvarno nezaobilazna]]
 ** predavanja 8
+   :PROPERTIES:
+   :CUSTOM_ID: p8_2017
+   :END:
    - [[file:clojure.org::*Read,%20evaluate%20vrtlog%20i%20makroi][Read, evaluate vrtlog i makroi]]
    - [[file:clojure.org::*clojure.spec][Clojure.spec]]
 ** predavanja 9
+   :PROPERTIES:
+   :CUSTOM_ID: p9_2017
+   :END:
    - Introduction
    - goroutines and concurent programming
 ** predavanja 10
+   :PROPERTIES:
+   :CUSTOM_ID: p10_2017
+   :END:
    - I/O and network programming
    - Go best practices
 ** predavanja 11
+   :PROPERTIES:
+   :CUSTOM_ID: p11_2017
+   :END:
 ** predavanja 12
+   :PROPERTIES:
+   :CUSTOM_ID: p12_2017
+   :END:
 ** predavanja 13
+   :PROPERTIES:
+   :CUSTOM_ID: p13_2017
+   :END:
 
 ** vežbe 1
 ** vežbe 2
@@ -77,9 +116,9 @@
 ** vežbe 10
 ** vežbe 11
 
-* Način ocenjivanja
+** Način ocenjivanja
 
-** Kolokvijumi u toku semestra
+*** Kolokvijumi u toku semestra
    | predmet ocenjivanja | udeo bodova (%) |
    |---------------------+-----------------|
    | kolokvijum 1        |              25 |
@@ -92,6 +131,139 @@
 
    - Ko nije zadovoljan ocenom nakon kolokvijuma može da uzme projekat
      i time nadoknadi bodove. *Maksimalna ocena 10*
+
+*** Test za one koji imaju <55 na kolokvijumima i ne žele projekat
+
+    Osnovne stvari iz svih delova. *Maksimalna ocena 6*.
+
+* 2018
+
+  #+ATTR_HTML: :border 2 :frame border
+  | nedelja | tema predavanja | datum predavanja | tema vežbi |
+  |---------+-----------------+------------------+------------|
+  |       1 | [[#p1_2018][Uvod u predmet]]  | <2018-02-21 Wed> |            |
+  |       2 | [[#p2_2018][Python 1]]        | <2018-02-28 Wed> |            |
+  |       4 | [[#p3_2018][Python 2]]        | <2018-03-07 Wed> | [[*vežbe 1][v1]]         |
+  |       3 | *ICIST*         |                  |            |
+  |       5 | [[#p4_2018][Python 3]]        | <2018-03-21 Wed> | [[*vežbe 2][v2]]         |
+  |---------+-----------------+------------------+------------|
+  |       6 | [[#p5_2018][Clojure 1]]       | <2018-03-28 Wed> | [[*vežbe 3][v3]]         |
+  |       7 | [[#p6_2018][Clojure 2]]       | <2018-04-04 Wed> | [[*vežbe 4][v4]]         |
+  |       8 | [[#p7_2018][Clojure 3]]       | <2018-04-18 Wed> | [[*vežbe 5][v5]]         |
+  |       9 | [[#p8_2018][Clojure 4]]       | <2018-04-25 Wed> | [[*vežbe 6][v6]]         |
+  |---------+-----------------+------------------+------------|
+  |      10 | [[#p9_2018][Smalltalk 1]]     | <2018-05-09 Wed> | [[*vežbe 7][v7]]         |
+  |      11 | [[#p10_2018][Smalltalk 2]]     | <2018-05-16 Wed> | [[*vežbe 8][v8]]         |
+  |---------+-----------------+------------------+------------|
+  |      12 | [[#p11_2018][Haskell 1]]       | <2018-05-23 Wed> | [[*vežbe 9][v9]]         |
+  |      13 | [[#p12_2018][Haskell 2]]       | <2018-05-30 Wed> | [[*vežbe 10][v10]]        |
+  |      14 | [[#p13_2018][Haskell 3]]       | <2018-06-06 Wed> | [[*vežbe 11][v11]]        |
+  #+TBLFM: $1=@# - 1
+
+  # Poglavlja ispod treba da sadrže kratak opis predavanja i vežbi, na
+  # njih gađaju linkovi iz tabele
+
+** predavanja 1
+   :PROPERTIES:
+   :CUSTOM_ID: p1_2018
+   :END:
+   - Kratak pregled oblasti
+   - Način polaganja - kolokvijumi ili mini projekat
+** predavanja 2
+   :PROPERTIES:
+   :CUSTOM_ID: p2_2018
+   :END:
+   - functools
+   - itertools
+   - collections
+   - eval
+   - generators
+   - cooroutines
+** predavanja 3
+   :PROPERTIES:
+   :CUSTOM_ID: p3_2018
+   :END:
+   - meta-classes, multiple inheritance, special methods, overriding operators
+   - Static types checking. New type hinting syntax. mypy
+   - Transpilers - Cython & Co. - Make Python programs run faster
+** predavanja 4
+   :PROPERTIES:
+   :CUSTOM_ID: p4_2018
+   :END:
+   - Parsing & code generators - DSL basics (mali uvod u JSD predmet)
+** predavanja 5
+   :PROPERTIES:
+   :CUSTOM_ID: p5_2018
+   :END:
+   - [[file:clojure.org::*Uvod][Uvod]]
+** predavanja 6
+   :PROPERTIES:
+   :CUSTOM_ID: p6_2018
+   :END:
+   - [[file:clojure.org::*Elementi%20jezika][Elementi jezika]]
+** predavanja 7
+   :PROPERTIES:
+   :CUSTOM_ID: p7_2018
+   :END:
+   - [[file:clojure.org::*Kada%20je%20mutacija%20stvarno%20nezaobilazna][Kada je mutacija stvarno nezaobilazna]]
+** predavanja 8
+   :PROPERTIES:
+   :CUSTOM_ID: p8_2018
+   :END:
+   - [[file:clojure.org::*Read,%20evaluate%20vrtlog%20i%20makroi][Read, evaluate vrtlog i makroi]]
+   - [[file:clojure.org::*clojure.spec][Clojure.spec]]
+** predavanja 9
+   :PROPERTIES:
+   :CUSTOM_ID: p9_2018
+   :END:
+   - Introduction
+   - goroutines and concurent programming
+** predavanja 10
+   :PROPERTIES:
+   :CUSTOM_ID: p10_2018
+   :END:
+   - I/O and network programming
+   - Go best practices
+** predavanja 11
+   :PROPERTIES:
+   :CUSTOM_ID: p11_2018
+   :END:
+** predavanja 12
+   :PROPERTIES:
+   :CUSTOM_ID: p12_2018
+   :END:
+** predavanja 13
+   :PROPERTIES:
+   :CUSTOM_ID: p13_2018
+   :END:
+
+** vežbe 1
+** vežbe 2
+** vežbe 3
+** vežbe 4
+** vežbe 5
+** vežbe 6
+** vežbe 7
+** vežbe 8
+** vežbe 9
+** vežbe 10
+** vežbe 11
+
+** Način ocenjivanja
+
+*** Kolokvijumi u toku semestra
+    | predmet ocenjivanja | udeo bodova (%) |
+    |---------------------+-----------------|
+    | kolokvijum 1        |              25 |
+    | kolokvijum 2        |              25 |
+    | kolokvijum 3        |              25 |
+    | kolokvijum 4        |              25 |
+    |---------------------+-----------------|
+    | ukupno              |             100 |
+    #+TBLFM: @>$2=vsum(@<<..@>>)
+
+    - Ko nije zadovoljan ocenom nakon kolokvijuma može da uzme projekat
+      i time nadoknadi bodove. *Maksimalna ocena 10*
 
 *** Test za one koji imaju <55 na kolokvijumima i ne žele projekat
 
